Prepare for deploy docker

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 venv/
 source/server/db.sqlite3
 source/server/static/st/*
+source/server/staticfiles/*
 contribute/vagrant/.vagrant
 node_modules/*
 semantic/*
