Change apt to apt-get WARNING: apt does not have a stable CLI interface. Use with caution in scripts.

--- a/contribute/docker/Dockerfile
+++ b/contribute/docker/Dockerfile
@@ -6,16 +6,16 @@ ENV TZ=Etc/UTC
 
 COPY requirements.txt requirements.txt
 
-RUN apt	update && \
-	apt install -y --no-install-recommends tzdata vim wget unzip && \
-	apt install -y --no-install-recommends \
+RUN apt-get	update && \
+	apt-get install -y --no-install-recommends tzdata vim wget unzip && \
+	apt-get install -y --no-install-recommends \
 		python3 python3-pip python3-idna python3-six python3-setuptools \
 		python3-dev build-essential \
 		locales git \
 		libpq-dev && \
 	pip3 install --no-cache-dir -r requirements.txt && \
-	apt remove -y python3-dev build-essential && \
-	apt -y autoremove && \
+	apt-get remove -y python3-dev build-essential && \
+	apt-get -y autoremove && \
 	rm -rf /var/lib/apt/lists/*
 
 # Setup time zone
