--- a/contribute/example/compose/nginx.conf
+++ b/contribute/example/compose/nginx.conf
@@ -8,6 +8,11 @@ server {
     listen 80;
     server_name localhost;
 
+    proxy_connect_timeout       300;
+    proxy_send_timeout          300;
+    proxy_read_timeout          300;
+    send_timeout                300;
+
     location / {
         proxy_pass http://web;
         proxy_set_header Host $host;
